Clean up maven-{compiler,surefire}-plugin usage
This removes a bit of redundant configuration that is already inherited from the parent pom or repeats plugin defaults. This also enables test output redirection to files along with enabling failed-first test ordering by default.

Signed-off-by: Matt Sicker <mattsicker@apache.org>